[package]
name = "ipld-brainz-rs"
version = "0.1.0"
authors = ["Tilde Rose <t1lde@protonmail.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
serde = { "version" = "1.0", "features" = ["derive"]}
uuid = { "version" = "0.8", "features" = ["serde"]}
chrono = { "version" = "0.4", "features" = ["serde"] }
derive_more = {"version" = "0.99.0" }
serde_with = { "version" = "1.3.1" }
string_cache = { "version" = "0.8" }
libipld = "0.12"
anyhow = "1.0"

[dev-dependencies]
string_cache_codegen = { "version" = "0.5" }
